fixed home state's macOS text style so it now goes behind the state navbar plus some minor syntax improvements

--- a/public/styles/css/homeStyles.css
+++ b/public/styles/css/homeStyles.css
@@ -884,7 +884,7 @@
 
 .home-macos .information-left {
   position: absolute;
-  z-index: 2;
+  z-index: -1;
 }
 
 #home_macos_image {
